coded mobile-first responsive

--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <!doctype html>
-<html lang="en">
+<html class="no-js" lang="en">
+
     <head>
+      <meta chardet="utf-8">
         <title> Natalie K. Designs </title>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+        <script src="https://kit.fontawesome.com/259e684512.js"></script>
     </head>
 
       <body>
+
         <header>
-          <div class="full-width">
-            <div class="half-width">
-              <h1>Natalie K. Designs</h1>
-            </div>
-            <div class="half-width">
+          <div class="content-wrapper">
+            <figure>
+              <a href="#"><img src="img/my-pink-logo.png" alt="nataliek. logo"></a>
+            </figure>
+
+              <h2>Natalie K. Designs</h2>
+
+              <div class="header-divider"></div>
               <nav>
                 <ul>
                   <li><a href="#portfolio">Portfolio</a></li>
@@ -22,76 +33,104 @@
                   <li><a href="#contact">Contact</a></li>
                 </ul>
               </nav>
-            </div>
           </div>
         </header>
 
-            <section id="top">
-              <img src="img/hero-background.png" alt="header photo" id="header-photo"/>
-                  <h3>let's <span style="color:#fa0075">code</span> <br>something eyesome.</h3>
-            </section>
+<main>
+        <section class="hero-area">
+              <div class="content-wrapper">
+                  <h1>Let's <span style="color:#fa0075">code</span> <br>something eyesome.</h1>
+                </div>
+        </section>
 
-    <main>
-        <section id="portfolio">
-            <div class="full-width">
-                <h2>my portfolio</h2>
-                <div class="half-width">
-                      <div id="jubilee-logo"><a href="../jubilee-austen-project/index.html"><img src="img/jubilee-thumbnail.png" width=500 alt="jubilee austeen project"/></a></div>
-                      <div id="rogue-pickings"><h4>Rogue Pickings</h4>
-                          <p> HTML & CSS Website</p>
-                          <p> The 'Rogue Pickings' project is an example of a static webpage I can create. It not only showcases my knowledge of HTML & CSS but it can be a template for a simple website you might need to help validate your business with the public and can be updated easily.</p></div>
-                      <div id="NYAQ-logo"><a href="../NYAQ/index.html"><img src="img/not-your-average-queen-logo.png" width=400 alt="not your average queen logo"/></a></div>
-                    </div>
-                    <div class="half-width">
-                        <div id="jubilee-description"><h4>Jubilee Austen Project</h4>
-                            <p>HTML & CSS Website</p>
-                            <p>The Jubilee Austeen Project showcases my HTML & CSS skills and capabilities. A website like this can be custom made with all your info, photos and colors of your choice. If needed, I can also provide stock photo options and design a logo for you or your business.</p></div>
-                        <div id="rogue-logo"><a href="../rogue-pickings-project/index.html"><img src="img/rogue-pickings-thumbnail.png" width=500 alt="rogue pickings logo"/></a></div>
-                        <div id="NYAQ-description"><h4>Not Your Average Queen</h4>
-                            <p>Branding, Visual Design, HTML & CSS Website</p>
-                            <p>Not Your Average Queen is a website I created specifically for personal branding. If you're in the market to market yourself as either an artist, a business professional, a lifestyle coach or what have you, I can help! First we can start off with determining efficiently your specific website needs that fit your goals to help you reach your target audience. Once determined, I can design, code and create the website for you!</p></div>
-                          </div>
-                    </div>
-          </section>
+        <section class="portfolio">
+            <div class="content-wrapper">
+                  <h3>my portfolio</h3>
+                  <div class="portfolio-items">
 
-        <section id="about">
-          <div class="full-width">
-                      <h2>about me</h2>
-                    <div class="half-width">
+                  <article>
+                  <h4>HTML/CSS</h4>
+                  <figure>
+                    <a href="#"><img src="img/jubilee-thumbnail.png" alt="jubilee thumbnail"></a>
+                  </figure>
+                </article>
+
+                <article>
+                  <h4>UX Design</h4>
+                  <figure>
+                    <a href="#"><img src="img/cc-thumbnail.jpg" alt="city cycles thumbnail"></a>
+                  </figure>
+                </article>
+
+                <article>
+                  <h4>Responsive Web Design</h4>
+                  <figure>
+                    <a href="#"><img src="img/responsive-image.png" alt="responsive icon"></a>
+                  </figure>
+                </article>
+
+                  <article>
+                  <h4>Branding & Identity Design</h4>
+                  <figure>
+                    <a href="#"><img src="img/the-whole-bean-logo.png" alt="whole ban logo"></a>
+                  </figure>
+                </article>
+
+            </div>
+          </div>
+        </section>
+
+        <section class="about">
+          <div class="content-wrapper">
+
+                      <h3>about me</h3>
                       <p><strong>Hi There! I'm Natalie K.</strong></p>
                       <p>I'm a Visual Designer located in Northern Virginia.<br>I love creating clean code with detailed eyesome user-friendly content. My specialty is taking concept through design to the end product always with the target customer in mind.</p>
                       <p>Before starting a web design career I was a Sweater Designer for 12 fantastic years in NYC where I harnessed my technical skills for a salable market.</p>
                       <p>Check out <strong><a href=#portfolio>my work</a></strong> and feel free to <strong><a href=#contact>contact me</a></strong> if you're in need of any visual design work!</p>
-                  </div>
           </div>
         </section>
 
-      <section id="contact">
-        <div class="full-width">
-          <h2>let's connect</h2>
-          <div class="third-width">
-            <p><strong>Contact me</strong></p>
-            <p>nkcode2design@gmail.com</p>
-          </div>
+</main>
 
-            <div class="third-width">
-              <div id="typewriter"> <img src="img/typewriter.png" alt=typewriter /> </div>
+      <footer>
+        <div class="content-wrapper">
+          <div class="footer-content">
+            <h3>let's connect</h3>
+            <div class="footer-divider"></div>
+
+            <address class="contact">
+                <p><span>Contact me</span></p>
+                <p>nkcode2design@gmail.com</p>
+            </address>
+
+            <figure>
+              <a href="#"><img src="img/typewriter.png" alt=typewriter/>
+            </figure>
+
+            <div class="social">
+              <p><span>Follow me</span></p>
+              <div class="social-icons">
+                <p>
+                  <a href="https://www.linkedin.com/in/natalie-k-33b39a166/" target="_blank">
+                  <i class="fab fa-linkedin"></i></a>
+                </p>
+                <p>
+                  <a href="https://github.com/NatalieKDesigns" target="_blank">
+                  <i class="fab fa-github"></i></a>
+                </p>
+                <p>
+                  <a href="https://www.instagram.com/nk_code2design/" target="_blank">
+                  <i class="fab fa-instagram"></i></a>
+              </p>
             </div>
-
-            <div class="third-width">
-              <p><strong>Follow me</strong></p>
-              <ul>
-                <li><a href="https://github.com/NatalieKDesigns" target="_blank"><img src="img/github.png" alt="github logo"/></a></li>
-                <li><a href="https://www.instagram.com/nk_code2design/" target="_blank"><img src="img/instagram.png" alt="instagram logo"/></a></li>
-                <li><img src="img/linkedin.png" alt="linkedin logo"/></li>
-                </ul>
-            </div>
           </div>
-        </section>
-        </main>
+        </div>
+      </div>
 
-            <footer>
-              <h4>Copyright 2018 | Natalie K. Designs</h4>
-            </footer>
+            <div class="copyright">
+              <p>Copyright 2018 | Natalie K. Designs</p>
+            </div>
+          </footer>
     </body>
 </html>
