--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 
     <head>
-      <meta chardet="utf-8">
+      <meta charset="utf-8">
         <title> Natalie K. Designs </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,13 +26,13 @@
               <h2>Natalie K. Designs</h2>
 
               <div class="header-divider"></div>
-              <nav>
-                <ul>
-                  <li><a href="#portfolio">Portfolio</a></li>
-                  <li><a href="#about">About</a></li>
-                  <li><a href="#contact">Contact</a></li>
-                </ul>
-              </nav>
+                <nav>
+                  <ul>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                  </ul>
+                </nav>
           </div>
         </header>
 
@@ -45,7 +45,7 @@
 
         <section class="portfolio">
             <div class="content-wrapper">
-                  <h3>my portfolio</h3>
+                  <h3 id="portfolio">my portfolio</h3>
                   <div class="portfolio-items">
 
                   <article>
@@ -65,7 +65,7 @@
                 <article>
                   <h4>Responsive Web Design</h4>
                   <figure>
-                    <a href="#"><img src="img/responsive-image.png" alt="responsive icon"></a>
+                    <a href="responsive/unplugged-retreat/index.html"><img src="img/responsive-image.png" alt="responsive icon"></a>
                   </figure>
                 </article>
 
@@ -83,7 +83,7 @@
         <section class="about">
           <div class="content-wrapper">
 
-                      <h3>about me</h3>
+                      <h3 id="about">about me</h3>
                       <p><strong>Hi There! I'm Natalie K.</strong></p>
                       <p>I'm a Visual Designer located in Northern Virginia.<br>I love creating clean code with detailed eyesome user-friendly content. My specialty is taking concept through design to the end product always with the target customer in mind.</p>
                       <p>Before starting a web design career I was a Sweater Designer for 12 fantastic years in NYC where I harnessed my technical skills for a salable market.</p>
@@ -96,7 +96,7 @@
       <footer>
         <div class="content-wrapper">
           <div class="footer-content">
-            <h3>let's connect</h3>
+            <h3 id ="contact">let's connect</h3>
             <div class="footer-divider"></div>
 
             <address class="contact">
@@ -105,7 +105,7 @@
             </address>
 
             <figure>
-              <a href="#"><img src="img/typewriter.png" alt=typewriter/>
+              <a href="#typewriter"><img src="img/typewriter.png" alt=typewriter></a>
             </figure>
 
             <div class="social">
