added responsive portfolio content

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <article>
                   <h4>HTML/CSS</h4>
                   <figure>
-                    <a href="#"><img src="img/jubilee-thumbnail.png" alt="jubilee thumbnail"></a>
+                    <a href="html-portfolio/index.html"><img src="img/jubilee-thumbnail.png" alt="jubilee thumbnail"></a>
                   </figure>
                 </article>
 
@@ -65,7 +65,7 @@
                 <article>
                   <h4>Responsive Web Design</h4>
                   <figure>
-                    <a href="responsive/unplugged-retreat/index.html"><img src="img/responsive-image.png" alt="responsive icon"></a>
+                    <a href="../../responsive/coding-responsive-websites/unplugged-retreat/index.html"><img src="img/unplugged.png" alt="responsive icon"></a>
                   </figure>
                 </article>
 
