made branding page responsive

--- a/branding-portfolio/index.html
+++ b/branding-portfolio/index.html
@@ -23,13 +23,12 @@
             <figure>
               <a href="../index.html"><img src="img/my-pink-logo.png" alt="nataliek. logo"></a>
             </figure>
-
               <h2>Natalie K. Designs</h2>
-                </article>
-                
+            </article>
+
               <h3>Portfolio</h3>
 
-                <div class="divider"></div>
+              <div class="divider"></div>
 
         </header>
 
@@ -37,46 +36,59 @@
 
 <section class="portfolio">
     <div class="content-wrapper">
-      <h2>HTML & CSS</h2>
+      <h2>Brand & Identity Design - The Whole Bean</h2>
 
       <div class="divider"></div>
-
+      
       <div class="portfolio-items">
-
-    <article>
-        <h4>Jubilee Austen Project</h4>
-        <p>HTML & CSS Website</p>
+      <article>
+        <h4>The Whole Bean Style Guide</h4>
           <figure>
-            <a href="../../jubilee-austen-project/index.html"><img src="../img/jubilee-thumbnail.png" alt="jubilee austeen project"/></a>
+            <a href="img/whole-bean-style-guide.pdf"><img src="img/WB-SG.png" alt="whole bean style guide"/></a>
           </figure>
-            <p>The Jubilee Austen Project showcases my HTML & CSS skills and capabilities. A website like this can be custom made with all your info, photos and colors of your choice. If needed, I can also provide stock photo options and design a logo for you or your business.
-            </p>
-    </article>
-
-      <div class="divider"></div>
-
-    <article>
-        <h4>Rogue Pickings</h4>
-          <p>HTML & CSS Website</p>
-          <figure>
-            <a href="../../rogue-pickings-project/index.html"><img src="../img/rogue-pickings-thumbnail.png" alt="rogue pickings logo"/></a>
-          </figure>
-          <p>The 'Rogue Pickings' project is an example of a static webpage I can create. It not only showcases my knowledge of HTML & CSS but it can be a template for a simple website you might need to help validate your business with the public and can be updated easily.</p>
-    </article>
+            <p>The Whole Bean brand style guide includes the mission statement, brand personality, color scheme, typography guidelines, logo, iconography, image guidelines and social media headers for a local coffee shop.</p>
+      </article>
 
       <div class="divider"></div>
 
       <article>
-        <h4>Not Your Average Queen</h4>
-          <p>Visual Design, HTML & CSS Website</p>
-            <figure>
-              <a href="../../NYAQ/index.html"><img src="../img/not-your-average-queen-logo.png" alt="not your average queen logo"/></a>
-            </figure>
-              <p>Not Your Average Queen is a website I created for a client that requested a personal website. If you're in the market to showcase your work or business, I can help with branding and visual design as well as coding the website. Feel free to contact me to review the process.</p>
+        <h4>The Whole Bean Landing Page</h4>
+        <figure>
+            <a href="img/WB-landing-page.png"><img src="img/WB-landing-page.png" alt="the whole bean landing page"/></a>
+          </figure>
+              <p>The Whole Bean landing page is the introduction of the coffee shop to the community and its target audience. It states promotional items for its grand opening and encourages people to sign up for its newsletter.</p>
       </article>
 
       <div class="divider"></div>
-                </div>
+
+      <article>
+        <h4>The Whole Bean Design Presentation</h4>
+        <figure>
+          <a href="img/wb-design-presentation.pdf"><img src="img/wb-design-presentation.png" alt="the whole bean design presentation"/></a>
+        </figure>
+        <p>The Whole Bean Design Presentation is part of the iteration process for the landing page design. Introducing the shop, landing page and key goals to their target audience, I received valuable feedback. I looked for trends and standout responses and incorporated those changes to make a solid landing page design.</p>
+      </article>
+
+      <div class="divider"></div>
+
+      <article>
+        <h4>The Whole Bean Landing Page (1st Version)</h4>
+          <figure>
+            <a href="img/WB-LP-first-version.png"><img src="img/WB-LP-first-version.png" alt="version 1 whole bean landing page"/></a>
+          </figure>
+          </article>
+
+          <div class="divider"></div>
+
+      <article>
+        <h4>The Whole Bean Wireframe</h4>
+          <figure>
+            <a href="img/WB-landing-page-wireframe.png"><img src="img/WB-landing-page-wireframe.png" alt="The Whole Bean wireframe"/></a>
+          </figure>
+      </article>
+
+      <div class="divider"></div>
+              </div>
             </div>
       </section>
   </main>
@@ -84,7 +96,7 @@
             <div class="content-wrapper">
               <div class="footer-content">
                 <h3 id ="contact">let's connect</h3>
-                <div class="footer-divider"></div>
+                <div class="divider"></div>
 
                 <address class="contact">
                     <p><span>Contact me</span></p>
