--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 
         <header>
           <div class="content-wrapper">
+            <article>
             <figure>
               <a href="#"><img src="img/my-pink-logo.png" alt="nataliek. logo"></a>
             </figure>
 
               <h2>Natalie K. Designs</h2>
+            </article>
 
               <div class="header-divider"></div>
                 <nav>
@@ -45,7 +47,7 @@
 
         <section class="portfolio">
             <div class="content-wrapper">
-                  <h3 id="portfolio">my portfolio</h3>
+                  <h3 id="portfolio">portfolio</h3>
                   <div class="portfolio-items">
 
                   <article>
@@ -58,7 +60,7 @@
                 <article>
                   <h4>UX Design</h4>
                   <figure>
-                    <a href="#"><img src="img/cc-thumbnail.jpg" alt="city cycles thumbnail"></a>
+                    <a href="#"><img src="img/UX-icon.png" alt="city cycles thumbnail"></a>
                   </figure>
                 </article>
 
@@ -72,7 +74,7 @@
                   <article>
                   <h4>Branding & Identity Design</h4>
                   <figure>
-                    <a href="#"><img src="img/the-whole-bean-logo.png" alt="whole ban logo"></a>
+                    <a href="branding-portfolio/index.html"><img src="img/the-whole-bean-logo.png" alt="whole ban logo"></a>
                   </figure>
                 </article>
 
@@ -101,7 +103,7 @@
 
             <address class="contact">
                 <p><span>Contact me</span></p>
-                <p>nkcode2design@gmail.com</p>
+                <p>nknatalienk@gmail.com</p>
             </address>
 
             <figure>
