added ux portfolio files

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <article>
                   <h4>UX Design</h4>
                   <figure>
-                    <a href="#"><img src="img/UX-icon.png" alt="city cycles thumbnail"></a>
+                    <a href="ux-portfolio/index.html"><img src="img/ux-icon.png" alt="city cycles thumbnail"></a>
                   </figure>
                 </article>
 
@@ -131,7 +131,7 @@
       </div>
 
             <div class="copyright">
-              <p>Copyright 2018 | Natalie K. Designs</p>
+              <p>Copyright 2019 | Natalie K. Designs</p>
             </div>
           </footer>
     </body>
