--- a/ux-portfolio/index.html
+++ b/ux-portfolio/index.html
@@ -23,13 +23,12 @@
             <figure>
               <a href="../index.html"><img src="img/my-pink-logo.png" alt="nataliek. logo"></a>
             </figure>
-
               <h2>Natalie K. Designs</h2>
-                </article>
+            </article>
 
               <h3>Portfolio</h3>
 
-                <div class="divider"></div>
+              <div class="divider"></div>
 
         </header>
 
@@ -37,46 +36,56 @@
 
 <section class="portfolio">
     <div class="content-wrapper">
-      <h2>HTML & CSS</h2>
+      <h2>- UX Design -<br>City Cycles</h2>
 
       <div class="divider"></div>
 
       <div class="portfolio-items">
-
-    <article>
-        <h4>Jubilee Austen Project</h4>
-        <p>HTML & CSS Website</p>
+      <article>
+        <h4>Stakeholder Presentation</h4>
           <figure>
-            <a href="../../jubilee-austen-project/index.html"><img src="../img/jubilee-thumbnail.png" alt="jubilee austeen project"/></a>
+            <a href="img/City-Cycles-Stakeholder-Presentation.pdf"><img src="img/stakeholder-icon.png" alt="city cycles stakeholder presentation"/></a>
           </figure>
-            <p>The Jubilee Austen Project showcases my HTML & CSS skills and capabilities. A website like this can be custom made with all your info, photos and colors of your choice. If needed, I can also provide stock photo options and design a logo for you or your business.
-            </p>
-    </article>
-
-      <div class="divider"></div>
-
-    <article>
-        <h4>Rogue Pickings</h4>
-          <p>HTML & CSS Website</p>
-          <figure>
-            <a href="../../rogue-pickings-project/index.html"><img src="../img/rogue-pickings-thumbnail.png" alt="rogue pickings logo"/></a>
-          </figure>
-          <p>The 'Rogue Pickings' project is an example of a static webpage I can create. It not only showcases my knowledge of HTML & CSS but it can be a template for a simple website you might need to help validate your business with the public and can be updated easily.</p>
-    </article>
+      </article>
 
       <div class="divider"></div>
 
       <article>
-        <h4>Not Your Average Queen</h4>
-          <p>Visual Design, HTML & CSS Website</p>
-            <figure>
-              <a href="../../NYAQ/index.html"><img src="../img/not-your-average-queen-logo.png" alt="not your average queen logo"/></a>
-            </figure>
-              <p>Not Your Average Queen is a website I created for a client that requested a personal website. If you're in the market to showcase your work or business, I can help with branding and visual design as well as coding the website. Feel free to contact me to review the process.</p>
+        <h4>UX Case Study</h4>
+        <figure>
+            <a href="img/City-Cycles-UX-Case-Study.pdf"><img src="img/UX-Case-Study-icon.png" alt="ux case study"/></a>
+          </figure>
       </article>
 
       <div class="divider"></div>
-                </div>
+
+      <article>
+        <h4>Usability Test</h4>
+        <figure>
+          <a href="img/City-Cycles-Usability-Test.pdf"><img src="img/usability-test-icon.png" alt="usability test"/></a>
+        </figure>
+      </article>
+
+      <div class="divider"></div>
+
+      <article>
+        <h4>Research Case Study</h4>
+          <figure>
+            <a href="img/City-Cycles-Research-Case-Study.pdf"><img src="img/research-case-icon.png" alt="research case study"/></a>
+          </figure>
+          </article>
+
+          <div class="divider"></div>
+
+      <article>
+        <h4>User Interview</h4>
+          <figure>
+            <a href="img/City-Cycles-User-Interview.pdf"><img src="img/user-interview-icon.png" alt="user interview icon"/></a>
+          </figure>
+      </article>
+
+      <div class="divider"></div>
+              </div>
             </div>
       </section>
   </main>
@@ -84,7 +93,7 @@
             <div class="content-wrapper">
               <div class="footer-content">
                 <h3 id ="contact">let's connect</h3>
-                <div class="footer-divider"></div>
+                <div class="divider"></div>
 
                 <address class="contact">
                     <p><span>Contact me</span></p>
